2008-05-17  Inge Wallin  <inge@lysator.liu.se>

	Remove functions that are already moved to projection helpers
	* src/lib/VectorMap.{h,cpp} (sphericalPaintBase): removed
	(EquirectPaintBase): removed
	(MercatorPaintBase): removed

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MergedLayerDecorator.cpp (paintClouds)

    Fix crash if clouds are displayed on the OpenStreetMap theme.
    The tiles have got different sizes so we need to scale one of them,
    otherwise memory gets overwritten what was the cause of this crash.

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MarbleModel.cpp (setMapTheme)

    Part 10 of groundwork for OpenStreetMap texture tiles.
    Do not call TileCreator if installmap (DGML) is empty.

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * data/CMakeLists.txt

    Part 9 of groundwork for OpenStreetMap texture tiles.
    Install data files for OpenStreetMap theme.

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TextureTile.cpp (loadRawTile): Make it a little bit easier
    to read and respect max. 100 chars/row.

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TextureTile.cpp
    (loadTile): Coding style.
    (destructor): Simplify.

    Small cleanup.

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TextureTile.cpp
    (loadTile)
    (destructor)

    Part 8 of groundwork for OpenStreetMap texture tiles.
    Add support for 48 bit color depth, reuse jumpTableFromQImage32 for that.
    TODO: change names *32 to *_32_48?

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TextureTile.cpp
    * src/lib/TextureTile.h (pixel)
    (loadTile)
    (destructor)

    Part 7 of groundwork for OpenStreetMap texture tiles.
    Add support for 1 bit color depth, reuse jumpTableFromQImage8 for that.
    TODO: change names *8 to *_1_8?

2008-05-16  Claudiu Covaci  <claudiu.covaci@gmail.com>
