@@ -1,4 +1,5 @@
 add_subdirectory( test )
+add_subdirectory( compass )
 add_subdirectory( satellites )
 add_subdirectory( overviewmap )
 
